# Dronoid

./: .gitignore  README.md
.github/workflows/: client.yml  rust.yml
client/: export_presets.cfg  icon.svg.import  project.godot
client/assets/: ship.mtl  ship.obj.import
client/assets/music/: README.md  space_graveyard.ogg.import  ville_seppanen-1_g.ogg.import
client/assets/ship/: LICENSE.md  basic_ship.obj.import
client/scenes/: connect.tscn  play.tscn
client/scripts/: connect_ui.gd  connect_ui.gd.uid  music_player.gd  music_player.gd.uid  net_client.gd  net_client.gd.uid  play.gd  play.gd.uid  sky_background.gd  sky_background.gd.uid  starship_controller.gd  starship_controller.gd.uid
client/shaders/: starfield.gdshader  starfield.gdshader.uid
client/themes/: ui_theme.tres
scripts/: fetch_addons.ps1  fetch_addons.sh  run-all.ps1  run-all.sh
server/: Cargo.toml
server/src/: connection.rs  db.rs  main.rs  protocol.rs
server/src/world/: gen.rs  mod.rs  types.rs
